[gd_scene load_steps=8 format=3 uid="uid://cd5mh5wd5ohyu"]

[ext_resource type="Script" path="res://scenes/player/HUD.gd" id="1_r84an"]
[ext_resource type="Theme" uid="uid://bdcsoxlchd7kb" path="res://resources/hud_theme.tres" id="2_we3x0"]
[ext_resource type="Texture2D" uid="uid://cirt7vnfn3fd7" path="res://assets/img/hud/crosshair.png" id="3_qrp6p"]
[ext_resource type="Texture2D" uid="uid://dkgve8hb25gqn" path="res://assets/img/hud/inventory_squares.png" id="4_uu1mx"]
[ext_resource type="PackedScene" uid="uid://bwjd7wqmeh6uv" path="res://scenes/player/slot.tscn" id="5_nj1yn"]
[ext_resource type="Texture2D" uid="uid://co5dgtsgcjaxs" path="res://assets/img/hud/exp_bar_under.png" id="6_jy6el"]
[ext_resource type="Texture2D" uid="uid://dd0fxxh4hmb34" path="res://assets/img/hud/exp_bar_progress.png" id="7_bwv1v"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_r84an")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_we3x0")
metadata/_edit_lock_ = true

[node name="FPSLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_bottom = 32.0
grow_horizontal = 0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="crosshair" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qrp6p")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="inventory" type="HBoxContainer" parent="HUD"]
custom_minimum_size = Vector2(400, 45)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -48.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 1
alignment = 1
metadata/_edit_lock_ = true

[node name="slots_texture" type="TextureRect" parent="HUD/inventory"]
custom_minimum_size = Vector2(400, 48)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("4_uu1mx")
expand_mode = 5

[node name="slots_container" type="HBoxContainer" parent="HUD/inventory/slots_texture"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = -4

[node name="slot1" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot2" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot3" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot4" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot5" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot6" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot7" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot8" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="slot9" parent="HUD/inventory/slots_texture/slots_container" instance=ExtResource("5_nj1yn")]
layout_mode = 2

[node name="ExpProgressBar" type="TextureProgressBar" parent="HUD"]
modulate = Color(1, 1, 1, 0.862745)
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
nine_patch_stretch = true
texture_under = ExtResource("6_jy6el")
texture_progress = ExtResource("7_bwv1v")
metadata/_edit_lock_ = true

[node name="ExpLvlLabel" type="Label" parent="HUD"]
custom_minimum_size = Vector2(40, 32)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -78.0
offset_right = 20.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.541176, 0.72549, 0.388235, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="itemName" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -104.0
offset_right = 20.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
